--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
     "bootstrap": "^5.3.8",
     "firebase": "^12.3.0",
     "vue": "^3.5.22",
