--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fullcalendar/core": "^6.1.19",
     "@fullcalendar/daygrid": "^6.1.19",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "firebase": "^12.3.0",
     "three": "^0.158.0",
