--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@fullcalendar/core": "^6.1.19",
     "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/list": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
     "bootstrap": "^5.3.8",
     "firebase": "^12.3.0",
     "vue": "^3.5.22",
