--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,17 @@
   "dependencies": {
     "@fullcalendar/core": "^6.1.19",
     "@fullcalendar/daygrid": "^6.1.19",
-    "axios": "^1.12.2",
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/list": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
+    "@types/three": "^0.180.0",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.0",
     "firebase": "^12.3.0",
     "pinia": "^3.0.3",
     "three": "^0.158.0",
+    "three-stdlib": "^2.36.0",
     "vue": "^3.5.22",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1"
