--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.8",
     "chart.js": "^4.5.0",
     "firebase": "^12.3.0",
+    "ical.js": "^2.2.1",
     "pinia": "^3.0.3",
     "three": "^0.158.0",
     "three-stdlib": "^2.36.0",
